# junia-isen-project-example-api

./: .gitignore  GitWorkflowGuidelines.md  README.md  package-lock.json  package.json  pyproject.toml  release.config.js
.github/workflows/: CD_pipeline.yml  CI_pipeline.yml  PR_pipeline.yml  PR_pipeline_validate_terraform.yml  analysis.yml  build.yml  build_artifact.yml  create_env.yml  deploy_artifact.yml  deploy_infrastructure.yml  initialize_linux_env.yml  install_python_dependency.yml  lint_test.yml  workflow_commit_linter.yml
api/: Dockerfile  app.py  newrelic.ini  requirements.txt
api/tests/: test_app.py
infrastructure/: main.tf  outputs.tf  providers.tf  variables.tf
infrastructure/modules/app_service/: main.tf  outputs.tf  variables.tf
infrastructure/modules/container_registry/: main.tf  outputs.tf  variables.tf
infrastructure/modules/db_service/: main.tf  outputs.tf  variables.tf
infrastructure/modules/network/: main.tf  outputs.tf  providers.tf  variables.tf
infrastructure/modules/resource_group/: main.tf  variables.tf
infrastructure/tests/: test.sh  test.tf
terraform/: main.tf  outputs.tf  providers.tf  variables.tf
