[project]
name = "junia-example-api"
version = "1.0.0"
description = "example api to practice terraform and CI/CD pipelines to Azure"
readme = "README.md"
requires-python = ">=3"
dependencies = [
    "flask = \"2.3.2\"",
    "werkzeug = \"2.3.7\"",
    "pytest = \"7.4.0\"",
]
[tool.setuptools]
packages = { find = {} }
[tool.uv]
dev-dependencies = [
     "pytest>=8.3.3",
    "flake8>=7.1.1"
]


