[project]
name = "junia-example-api"
version = "1.0.0"
description = "Example API to practice Terraform and CI/CD pipelines to Azure"
readme = "README.md"
requires-python = ">=3.10"  # Specify the exact Python version range
dependencies = [
    "Flask==2.1.3",
    "Werkzeug==2.3.7",
    "pytest==7.4.0",
    "python-dotenv==1.0.1",
    "azure-cosmos==4.9.0",
    "flasgger>=0.9.7.1",
    "newrelic>=10.0.0",  
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = {} }

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "flake8>=6.1.0",
]
